SQUAD-9-313 Implementation of REST API for client update
