# public/swagger.json
@@ -1,96 +1,129 @@
 {
-  "swagger": "2.0",
-  "info": {
-    "title": "myjar-test-task-service.js",
-    "description": "MYJAR test-task-service.js"
-  },
-  "host": "test.myjar.com",
-  "schemes": [
-    "https"
-  ],
-  "consumes": [
-    "application/json"
-  ],
-  "produces": [
-    "application/json"
-  ],
-  "basePath": "/api/myjar-test-task-service/",
-  "paths": {
-    "/api/v1/clients": {
-      "GET": {
-        "summary": "Gets all clients in database",
-        "responses": {
-          "200": {
-            "description": "List of clients or empty array"
-					},
-					"500": {
-						"description": "Something went wrong!"
-					}
+    "swagger": "2.0",
+    "info": {
+        "title": "myjar-test-task-service.js",
+        "description": "MYJAR test-task-service.js"
+    },
+    "host": "test.myjar.com",
+    "schemes": [
+        "https"
+    ],
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
+    "basePath": "/api/myjar-test-task-service/",
+    "paths": {
+        "/api/v1/clients": {
+            "GET": {
+                "summary": "Gets all clients in database",
+                "responses": {
+                    "200": {
+                        "description": "List of clients or empty array"
+                    },
+                    "500": {
+                        "description": "Something went wrong!"
+                    }
+                }
+            },
+            "POST": {
+                "summary": "ClientModel",
+                "responses": {
+                    "200": {
+                        "description": "List of clients or empty array"
+                    }
+                }
+            }
+        },
+        "/api/v1/clients/{id}": {
+            "GET": {
+                "summary": "ClientModel",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "Client UUID v4",
+                    "required": true
+                }],
+                "responses": {
+                    "200": {
+                        "description": "Returns client data"
+                    }
+                }
+            },
+            "DELETE": {
+                "summary": "ClientModel",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "Client UUID v4",
+                    "required": true
+                }],
+                "responses": {
+                    "200": {
+                        "description": "Returns ok and client is deleted if exists"
+                    }
+                }
+            },
+            "PATCH": {
+                "summary": "ClientModel",
+                "parameters": [{
+                    "name": "id",
+                    "in": "path",
+                    "description": "Client UUID v4",
+                    "required": true
+                }],
+                "responses": {
+                    "200": {
+                        "description": "Returns ok and client is updated successfully"
+                    },
+                    "400": {
+                        "description": "Bad request"
+                    },
+                    "415": {
+                        "description": "Unsupported media type"
+                    },
+                    "422": {
+                        "description": "Server can not proess the request"
+                    }
+                }
+            }
         }
-			},
-			"POST": {
-        "summary": "ClientModel",
-        "responses": {
-          "200": {
-            "description": "List of clients or empty array"
-          }
+    },
+    "definitions": {
+        "ClientModel": {
+            "properties": {
+                "firstname": {
+                    "type": "string",
+                    "minLength": 1,
+                    "maxLength": 64
+                },
+                "surname": {
+                    "type": "string",
+                    "minLength": 1,
+                    "maxLength": 64
+                },
+                "phoneNumber": {
+                    "type": "string",
+                    "pattern": "^\\+4407([0-9]{9,14})"
+                }
+            },
+            "required": ["firstname", "surname", "phoneNumber"]
+        },
+        "ClientPatchModel": {
+            "properties": {
+                "firstname": {
+                    "type": "string",
+                    "minLength": 1,
+                    "maxLength": 64
+                },
+                "surname": {
+                    "type": "string",
+                    "minLength": 1,
+                    "maxLength": 64
+                }
+            }
         }
-      }
-		},
-		"/api/v1/clients/{id}": {
-      "GET": {
-				"summary": "ClientModel",
-				"parameters": [
-					{
-						"name": "id",
-						"in": "path",
-						"description": "Client UUID v4",
-						"required": true
-					}
-				],
-        "responses": {
-          "200": {
-            "description": "Returns client data"
-          }
-        }
-			},
-			"DELETE": {
-				"summary": "ClientModel",
-				"parameters": [
-					{
-						"name": "id",
-						"in": "path",
-						"description": "Client UUID v4",
-						"required": true
-					}
-				],
-        "responses": {
-          "200": {
-            "description": "Returns ok and client is deleted if exists"
-          }
-        }
-      }
     }
-  },
-  "definitions": {
-    "ClientModel": {
-      "properties": {
-        "firstname": {
-					"type": "string",
-					"minLength": 1,
-					"maxLength": 64
-				},
-				"surname": {
-					"type": "string",
-					"minLength": 1,
-					"maxLength": 64
-				},
-				"phoneNumber": {
-					"type": "string",
-					"pattern": "^\\+4407([0-9]{9,14})"
-				}
-      },
-      "required": ["firstname", "surname", "phoneNumber"]
-    }
-  }
 }
